; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_zign.c_fcnMatchCB.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_zign.c_fcnMatchCB.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.ctxSearchCB = type { i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.TYPE_4__*, i8*)* @fcnMatchCB to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fcnMatchCB(i32* %0, %struct.TYPE_4__* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ctxSearchCB*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to %struct.ctxSearchCB*
  store %struct.ctxSearchCB* %9, %struct.ctxSearchCB** %7, align 8
  %10 = load %struct.ctxSearchCB*, %struct.ctxSearchCB** %7, align 8
  %11 = getelementptr inbounds %struct.ctxSearchCB, %struct.ctxSearchCB* %10, i32 0, i32 3
  %12 = load i32, i32* %11, align 4
  %13 = load i32*, i32** %4, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %18 = call i32 @r_anal_fcn_realsize(%struct.TYPE_4__* %17)
  %19 = load %struct.ctxSearchCB*, %struct.ctxSearchCB** %7, align 8
  %20 = getelementptr inbounds %struct.ctxSearchCB, %struct.ctxSearchCB* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.ctxSearchCB*, %struct.ctxSearchCB** %7, align 8
  %23 = getelementptr inbounds %struct.ctxSearchCB, %struct.ctxSearchCB* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = load %struct.ctxSearchCB*, %struct.ctxSearchCB** %7, align 8
  %26 = getelementptr inbounds %struct.ctxSearchCB, %struct.ctxSearchCB* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @addFlag(i32 %12, i32* %13, i32 %16, i32 %18, i32 %21, i32 %24, i32 %27)
  %29 = load %struct.ctxSearchCB*, %struct.ctxSearchCB** %7, align 8
  %30 = getelementptr inbounds %struct.ctxSearchCB, %struct.ctxSearchCB* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %30, align 4
  ret i32 1
}

declare dso_local i32 @addFlag(i32, i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @r_anal_fcn_realsize(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
